[package]
name = "sp1-benchmarks-eval"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
bincode = "1.3.3"
serde_json = "1.0"
chrono = "0.4.38"

# sp1
sp1-prover = { git = "https://github.com/succinctlabs/sp1-wip.git", rev = "b3d293b9916aeca9dba59d8778e796335b7f6e58" }
sp1-core-executor = { git = "https://github.com/succinctlabs/sp1-wip.git", rev = "b3d293b9916aeca9dba59d8778e796335b7f6e58" }
sp1-core-machine = { git = "https://github.com/succinctlabs/sp1-wip.git", rev = "b3d293b9916aeca9dba59d8778e796335b7f6e58" }
sp1-cuda = { git = "https://github.com/succinctlabs/sp1-wip.git", rev = "b3d293b9916aeca9dba59d8778e796335b7f6e58", optional = true }
sp1-stark = { git = "https://github.com/succinctlabs/sp1-wip.git", rev = "b3d293b9916aeca9dba59d8778e796335b7f6e58" }

# risc0
risc0-zkvm = { version = "1.2.0", default-features = false, features = [
  "prove",
], optional = true }

# sp1-reth
sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", branch = "john/update-for-v1" }
ed25519-dalek = { version = "2.1.1", features = ["digest", "rand_core", "serde", "signature"] }
k256 = { version = "=0.13.3", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = "1.0.215"

[features]
cuda = ["dep:sp1-cuda", "risc0-zkvm?/cuda"]
risc0 = ["dep:risc0-zkvm"]
