[package]
name = "sp1-benchmarks-eval"
version = "0.1.0"
edition = "2021"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
bincode = "1.3.3"
serde_json = "1.0"
chrono = "0.4.38"

# sp1
sp1-prover = { version = "4.0.0-rc.10", features = ["native-gnark"] }
sp1-core-executor = { version = "4.0.0-rc.10", features = ["profiling"] }
sp1-core-machine = { version = "4.0.0-rc.10" }
sp1-cuda = { version = "4.0.0-rc.10", optional = true }
sp1-stark = { version = "4.0.0-rc.10" }
sp1-sdk = { version = "4.0.0-rc.10", features = ["native-gnark"] }

# sp1-prover = { path = "../../sp1/crates/prover", features = ["native-gnark"] }
# sp1-core-executor = { path = "../../sp1/crates/core/executor" }
# sp1-core-machine = { path = "../../sp1/crates/core/machine" }
# sp1-cuda = { path = "../../sp1/crates/cuda", optional = true }
# sp1-stark = { path = "../../sp1/crates/stark" }
# sp1-sdk = { path = "../../sp1/crates/sdk" }

# risc0
risc0-zkvm = { version = "=1.2.1", default-features = false, features = [
  "prove",
  "unstable",
], optional = true }
risc0-groth16 = { version = "=1.2.1", optional = true }

# sp1-reth
sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", branch = "john/update-for-v1" }
ed25519-dalek = { version = "2.1.1", features = ["digest", "rand_core", "serde", "signature"] }
k256 = { version = "=0.13.3", features = ["serde"] }
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0.215", features = ["derive"] }

[features]
default = []
sp1 = []
cuda = ["dep:sp1-cuda", "risc0-zkvm?/cuda"]
risc0 = ["dep:risc0-zkvm", "dep:risc0-groth16"]
