[workspace]
[package]
name = "ecdsa-verify-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
k256 = { version = "=0.13.3", features = ["serde", "ecdsa"] }
sp1-zkvm = "3.3.0"

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", tag = "ecdsa-v0.16.9-patch-v3.3.0" }

[features]
risc0 = []
sp1 = []
