[workspace]
[package]
name = "eddsa-verify-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde", "signature"] }
risc0-zkvm = { version = "1.2.0", features = ["std"] }

[patch.crates-io]
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

[features]
risc0 = []
sp1 = []
