[workspace]
[package]
name = "eddsa-verify-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde", "signature"] }
sp1-zkvm = "3.3.0"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "curve25519_dalek-v4.1.3-patch-v1" }

[features]
risc0 = []
sp1 = []
