[workspace]
[package]
name = "eddsa-verify-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde", "signature"] }
sp1-zkvm = "4.0.0-rc.10"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-4.1.3-sp1-4.0.0-rc.3" }

[features]
risc0 = []
sp1 = []
