[workspace]
[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", rev = "ffe408a" }
risc0-zkvm = { version = "0.21.0", default-features = false, features = [
    "std",
] }

[features]
risc0 = []
sp1 = []
