[workspace]
[package]
name = "fibonacci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }

[features]
risc0 = []
sp1 = []
