[workspace]
[package]
name = "helios-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
# helios
helios-consensus-core = { git = "https://github.com/a16z/helios", version = "0.7.0" }

serde_cbor = "0.11.2"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
alloy-primitives = "0.7.7"
tree_hash = "0.7.0"
serde = "1.0.203"
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
ed25519-consensus = { git = "https://github.com/risc0/ed25519-consensus", rev = "8a6d26d1fcd377f9322ba83d3732d04c157e4778" }

[features]
risc0 = []
sp1 = []
