[workspace]
[package]
name = "helios-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
# helios
helios-consensus-core = { git = "https://github.com/a16z/helios", version = "0.7.0" }

serde_cbor = "0.11.2"
ssz-rs = { package = "ssz_rs", version = "0.9.0" }
alloy-primitives = "0.7.7"
tree_hash = "0.7.0"
serde = "1.0.203"
risc0-zkvm = { version = "=1.2.1", default-features = false, features = ["std", "unstable"] }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }	
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }
p256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "p256/v0.13.2-risczero.0" }
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }

ethereum_hashing = { git = "https://github.com/ncitron/ethereum_hashing", rev = "7ee70944ed4fabe301551da8c447e4f4ae5e6c35" }

[features]
risc0 = []
sp1 = []
