[workspace]
[package]
name = "loop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp1-zkvm = "4.0.0-rc.10"
risc0-zkvm = { version = "=1.2.1", default-features = false, features = ["std", "unstable"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }

[features]
risc0 = []
sp1 = []
