[workspace]
[package]
version = "0.1.0"
name = "reth-risc0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "=1.0.0", default-features = false, features = ["std"] }
sp1-reth-primitives = { git = "https://github.com/succinctlabs/sp1-reth.git", branch = "john/update-for-v1" }

alloy-rlp = { version = "0.3", default-features = false }
reth-primitives = { git = "https://github.com/sp1-patches/reth-new", branch = "john/update-for-v1", default-features = false }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1", features = [
    "serde",
], default-features = false }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1", default-features = false }
bincode = "1.3.3"
serde = { version = "1.0.204", default-features = false, features = ["derive"] }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
revm = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }
revm-primitives = { git = "https://github.com/sp1-patches/revm-new", branch = "john/update-for-v1" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }

[features]
risc0 = []
