[workspace]
[package]
name = "rsp-risc0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risc0-zkvm = { version = "=1.2.0-rc.1", default-features = false, features = ["std"] }
risc0-zkvm-platform = { version = "=1.2.0-rc.1", default-features = false, features = ["sys-getenv"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
bincode = "1.3.3"
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "249b34ee0c5307b59dc48f1f45a474b04669c6c4" }

[features]
risc0 = []
sp1 = []

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.3-risczero.0" }
kzg-rs = { git = "https://github.com/succinctlabs/kzg-rs.git", branch = "john/target-vendor" }
sp1_bls12_381 = { git = "https://github.com/sp1-patches/bls12_381.git", package = "bls12_381", rev = "7e1b79041253d6f7b591534613245b3f60e05d8b", version = "0.8.0" }