[workspace]
[package]
version = "0.1.0"
name = "ssz-withdrawals"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1", branch = "dev" }
hex-literal = "0.4.1"
sha2 = "0.9.8"
sha2_risc0 = { package = "sha2", git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
sha2_sp1 = { package = "sha2", git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
ssz_rs = { version = "0.9.0", features = ["serde"] }
serde_json = "1.0.111"
hex = "0.4.3"
serde_with = { version = "3.4.0", features = ["hex"] }
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
alloy-primitives = "0.6.0"
cfg-if = "1.0.0"
risc0-zkvm = { version = "1.2.0", default-features = false, features = ["std"] }

[features]
sp1 = []
risc0 = []
