[package]
version = "0.1.0"
name = "tendermint-jolt"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[dependencies]
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tendermint = { version = "0.39.0", default-features = false }
tendermint-light-client-verifier = { version = "0.39.0", default-features = false, features = [
    "rust-crypto",
] }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt", features = [
    "guest-std",
], rev = "845d39af373de078ee2616cf36a255f36f38334a" }


[features]
guest = []
