[workspace]
[package]
version = "0.1.0"
name = "tendermint-risc0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false, features = [
    "std",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { version = "0.34.0", default-features = false }
tendermint-light-client-verifier = { version = "0.34.0", default-features = false, features = [
    "rust-crypto",
] }

[patch.crates-io]
# Placing these patch statement in the workspace Cargo.toml will add RISC Zero SHA-256 and bigint
# multiplication accelerator support for all downstream usages of the following crates.
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.2-risczero.0" }
ed25519-consensus = {  git = "ssh://git@github.com/succinctlabs/ed25519-consensus-private.git", branch = "uma/risc0" }

[features]
risc0 = []