[workspace]
[package]
version = "0.1.0"
name = "tendermint-sp1"
edition = "2021"

[dependencies]
sp1-zkvm = "4.0.0-rc.10"

serde = { version = "1.0.204", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tendermint = { version = "=0.40.1", default-features = false }
tendermint-light-client-verifier = { version = "=0.40.1", default-features = false, features = [
    "rust-crypto",
] }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3" }
curve25519-dalek-ng = { git = "https://github.com/sp1-patches/curve25519-dalek-ng", tag = "patch-4.1.1-sp1-4.0.0-rc.3"  }

[features]
sp1 = []
