[workspace]
[package]
name = "zk-email-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rsa = { version = "=0.9.6", optional = true }
sp1-rsa = { package = "rsa", git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "n/prep-4.0.0", optional = true }
serde = "1.0.200"
sp1-zkvm = "4.0.0-rc.10"
sha2-sp1 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0-rc.3", optional = true }
sha2-risc0 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.6-risczero.0", optional = true }
risc0-zkvm = { version = "=1.2.1", default-features = false, features = ["std", "unstable"], optional = true }

[features]
risc0 = ["dep:rsa", "dep:sha2-risc0", "dep:risc0-zkvm"]
sp1 = ["dep:sp1-rsa", "dep:sha2-sp1"]

[patch.crates-io]
rsa = { git = "https://github.com/risc0/RustCrypto-RSA", tag = "v0.9.6-risczero.0" }	