[workspace]
[package]
name = "zk-email-sp1"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rsa = { version = "0.9.7", optional = true }
sp1-rsa = { package = "rsa", git = "https://github.com/sp1-patches/RustCrypto-RSA", branch = "patch-rsa-v0.9.6", optional = true }
serde = "1.0.200"
sha2 = "0.10.8"
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "9e13d02c3310966f50b3e5024821cfd0a5580ede" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }

[features]
risc0 = ["dep:rsa"]
sp1 = ["dep:sp1-rsa"]
